[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/BaseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/BaseButton.tscn" type="PackedScene" id=3]

[node name="Menu" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Title" parent="NinePatchRect/MarginContainer/ContentContainer" index="0"]
text = "Options"

[node name="SoundVolumeControl" type="HBoxContainer" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="0"]
margin_top = 1.0
margin_right = 256.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/SoundVolumeControl" index="0"]
margin_right = 79.0
margin_bottom = 11.0
text = "Sound Volume"

[node name="SoundSlider" type="HSlider" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/SoundVolumeControl" index="1"]
margin_left = 83.0
margin_right = 256.0
margin_bottom = 11.0
focus_neighbour_top = NodePath("../../BackButton")
focus_neighbour_bottom = NodePath("../../MusicVolumeControl/MusicSlider")
focus_next = NodePath("../../MusicVolumeControl/MusicSlider")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 1.0

[node name="MusicVolumeControl" type="HBoxContainer" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="1"]
margin_top = 20.0
margin_right = 256.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/MusicVolumeControl" index="0"]
margin_right = 77.0
margin_bottom = 11.0
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/MusicVolumeControl" index="1"]
margin_left = 81.0
margin_right = 256.0
margin_bottom = 11.0
focus_neighbour_top = NodePath("../../SoundVolumeControl/SoundSlider")
focus_neighbour_bottom = NodePath("../../BackButton")
focus_next = NodePath("../../BackButton")
focus_previous = NodePath("../../SoundVolumeControl/SoundSlider")
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.1
value = 1.0

[node name="BackButton" parent="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer" index="2" instance=ExtResource( 3 )]
margin_top = 39.0
margin_right = 256.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../MusicVolumeControl/MusicSlider")
focus_neighbour_bottom = NodePath("../SoundVolumeControl/SoundSlider")
focus_previous = NodePath("../MusicVolumeControl/MusicSlider")
text = "Back"

[connection signal="value_changed" from="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/SoundVolumeControl/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/MusicVolumeControl/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/ContentContainer/ButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
